# anthropic-2025-spongebob

./: LICENSE  README.md  breakdown.md  claude_app.py  package-lock.json  requirements.txt  start_backend.sh  test_parser.py  workflow.md
.cursor/rules/: backend.mdc  coding-practices.mdc
archives/mcp_client/: client.py  pyproject.toml
archives/mcp_example/mcp-client/: client.py
archives/mcp_server/: pdf_search.py
backend/: pyproject.toml
backend/app/: frontend_router.py  main.py  openai_echo.py  orchestrator.py  pdf_loading_utils.py  settings.py
backend/app/archives/: main.py
backend/app/tools/: pdf_search.py
backend/mcp_server/: pdf_search.py  pyproject.toml  server.py  test_pdf_search.py
backend/mcp_server/parsed_pdfs/: cleaned_quote.txt
backend/parsed_pdfs/: HaluEval.txt  WGAN.txt  car_park_controversy.txt  circ.txt  fermionic_convolution.txt  fgan.txt  gettysburg_address.txt  interpretability.txt
backend/tests/: debug_chat.py  test_pdf_chat.py  test_upload.py
benchmarking/: benchmark_wrapper.py  sample_result.md  stream_wrapper.py
front-test-/: .gitignore
front-test-/src/lib/components/chat/: ChatPlaceholder.svelte
front-test/src/lib/components/chat/: MessageInput.svelte  (+1 more)
front-test_/: 0-our-hackathon-memo.md  README.md
front-test_/backend/open_webui/: main.py
mcp-client/: client.py  pyproject.toml
mcp_example/weather/: weather.py
mcp_server/: build_workflow.md  server.py  server_specs.md
parsed_pdfs/: cleaned_quote.txt  cleaned_text.txt  unlearning.txt
prompts/: prompt.txt
results/: validation_results.json
(+2 files in other folders)
